--- a/Index.html
+++ b/Index.html
@@ -61,7 +61,7 @@
         </p>
      
         </p>
-        <a href="https://www.google.com" target="_blank" class="boton">Visita Google</a>
+        <a href="Cartel Teratogenos.html" target="_blank" class="boton">Visita Cartel Teratogenos</a>
     </main>
 
     <footer>
